--- a/configure_client.toml
+++ b/configure_client.toml
@@ -25,8 +25,7 @@ serverAddr=[
 
 
 [rule]
-# actually the word "bypass" here here should be "direct"
-bypass=[
+direct=[
     ".cn",
     "qq.com",
     "163.com",
